# pest-report-extractor-android

./: .gitignore  0_build.txt  Android15快速修复清单.md  Android15闪退调试指南.md  Android15问题总结和解决方案.md  Android16_WebSolution.md  Android16兼容性调试指南.md  Android16完整解决方案总结.md  Android16快速修复步骤.md  Android打包说明.md  Android权限修复说明.md  BUILD12_解决方案概述.md  GitHub_Actions_使用指南.md  README.md  README_Android16修复指南.md  README_Android版本确认.md  README_GITHUB.md  android_main.py  android_main_minimal.py  android_main_simple.py  android_minimal_test.py  build_apk.sh  buildozer.spec  buildozer.spec.backup  buildozer.spec.current-backup  buildozer_briefcase.spec  deploy_to_github.sh  main.py  main_kivy_old.py  pest_report_extractor.py  pest_report_extractor_v2.0_final.py1  pyproject.toml  test_autopoint.sh  v2.0完成总结.md  使用说明.md  功能完整性确认.md  如何查看报告.md  快速入门.md  快速参考.md  快速打包指南.md  (+11 more)
.github/workflows/: build-apk-test.yml  build-apk.yml
logs_49432016097/: 0_build.txt
logs_49433385648/: 0_build.txt
logs_49445563482/: 0_build.txt
logs_49446103783/: 0_build.txt
logs_49446293814/: 0_build.txt
logs_49446610733/: 0_build.txt
logs_49447029479/: 0_build.txt
logs_49450334546/: 0_build.txt
src/java/: MainActivity.java
src/pestreportextractor/: __init__.py  app.py
